fix: pagination for course
